--- a/ofl/cairoplay/DESCRIPTION.en_us.html
+++ b/ofl/cairoplay/DESCRIPTION.en_us.html
@@ -1,1 +1,3 @@
-N/A
+<p>Cairo Play is a color font version of the <a href="https://fonts.google.com/specimen/Cairo">Cairo family</a>.</p>
+
+<p>To contribute, see <ahref="https://github.com/Gue3bara/Cairo">github.com/Gue3bara/Cairo</a>.</p>
